<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chikadora</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="password">Password</string>
    <string name="confpass">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="status">Status</string>

</resources>
